# bytecheck

./: ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  compare.rs  error.rs  label.rs  lib.rs  main.rs  metadata.rs  normalize.rs
src/artifact/: build_info.rs  foundry.rs  hardhat.rs  mod.rs
src/chain/: client.rs  mod.rs  proxy.rs
src/commands/: mod.rs  verify.rs
src/report/: json.rs  mod.rs  sarif.rs  text.rs
